<resources>
    <string name="app_name">NextRaceApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="main_page_title">Main Page</string>
    <string name="search_page_title">Search</string>
    <string name="categories_title">Most Popular</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="formula_1_page_title">Formula 1</string>
    <string name="formula_2_page_title">Formula 2</string>
    <string name="formula_3_page_title">Formula 3</string>
    <string name="formula_e_page_title">Formula E</string>
    <string name="dtm_page_title">Deutsche Tourenwagen Masters</string>
    <string name="history_events_page_title">Previous Races</string>
    <string name="about_me_page_title">About Me</string>
    <string name="date_label">Date</string>
    <string name="local_time_label">Local Time</string>
    <string name="cet_time_label">CET Time</string>
    <string name="laps_label">Laps</string>
    <string name="donate_page_title">Donate</string>
    <string name="find">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
