<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/main_page_fragment">

    <fragment
        android:id="@+id/main_page_fragment"
        android:name="nextrace.app.fragments.RacesAllFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_races_all"/>

    <fragment
        android:id="@+id/search_page_fragment"
        android:name="nextrace.app.fragments.SearchFragment"
        android:label="@string/search_page_title"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/formula_1_page_fragment"
        android:name="nextrace.app.fragments.Formula1Fragment"
        android:label="@string/formula_1_page_title"
        tools:layout="@layout/fragment_formula1"/>

    <fragment
        android:id="@+id/formula_2_page_fragment"
        android:name="nextrace.app.fragments.Formula2Fragment"
        android:label="@string/formula_2_page_title"
        tools:layout="@layout/fragment_formula2"/>

    <fragment
        android:id="@+id/formula_3_page_fragment"
        android:name="nextrace.app.fragments.Formula3Fragment"
        android:label="@string/formula_3_page_title"
        tools:layout="@layout/fragment_formula3"/>

    <fragment
        android:id="@+id/formula_e_page_fragment"
        android:name="nextrace.app.fragments.FormulaEFragment"
        android:label="@string/formula_e_page_title"
        tools:layout="@layout/fragment_formula_e"/>

    <fragment
        android:id="@+id/dtm_page_fragment"
        android:name="nextrace.app.fragments.DtmFragment"
        android:label="@string/dtm_page_title"
        tools:layout="@layout/fragment_dtm"/>

    <fragment
        android:id="@+id/previous_races_page_fragment"
        android:name="nextrace.app.fragments.PreviousRacesFragment"
        android:label="@string/history_events_page_title"
        tools:layout="@layout/fragment_previous_races"/>

    <fragment
        android:id="@+id/about_me_page_fragment"
        android:name="nextrace.app.fragments.AboutMeFragment"
        android:label="@string/about_me_page_title"
        tools:layout="@layout/fragment_about_me"/>

    <fragment
        android:id="@+id/donate_page_fragment"
        android:name="nextrace.app.fragments.DonateFragment"
        android:label="@string/donate_page_title"
        tools:layout="@layout/fragment_donate"/>


</navigation>