<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        android:id="@+id/item_race_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="5px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/race_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/text"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="5px">

                    <ImageView
                        android:id="@+id/race_category_logo"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingRight="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/race_country_flag"
                    android:layout_marginLeft="10dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/track_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:paddingBottom="10dp"
                android:background="@color/background"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:textColor="@color/text"
                        android:textSize="12sp"
                        android:text="@string/date_label"
                        android:paddingTop="5dp"
                        android:paddingBottom="2dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/race_date"
                        android:textColor="@color/text"
                        android:textSize="12sp"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text"
                        android:paddingTop="5dp"
                        android:paddingBottom="2dp"/>
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:textColor="@color/text"
                        android:textSize="12sp"
                        android:text="@string/local_time_label"
                        android:paddingTop="5dp"
                        android:paddingBottom="2dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/race_local_time"
                        android:textColor="@color/text"
                        android:textSize="12sp"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text"
                        android:paddingTop="5dp"
                        android:paddingBottom="2dp"/>
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:textColor="@color/text"
                        android:textSize="12sp"
                        android:text="@string/cet_time_label"
                        android:paddingTop="5dp"
                        android:paddingBottom="2dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/race_cet_time"
                        android:textColor="@color/text"
                        android:textSize="12sp"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text"
                        android:paddingTop="5dp"
                        android:paddingBottom="2dp"/>
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:textColor="@color/text"
                        android:textSize="12sp"
                        android:text="@string/laps_label"
                        android:paddingTop="5dp"
                        android:paddingBottom="2dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/race_laps"
                        android:textColor="@color/text"
                        android:textSize="12sp"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <FrameLayout
            android:id="@+id/color_1"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="@color/f1"
            android:layout_gravity="end|bottom"/>

        <FrameLayout
            android:id="@+id/color_2"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:background="@color/f1"
            android:layout_gravity="end|bottom"/>
</androidx.cardview.widget.CardView>
